[package]
name = "fishgill"
version = "0.1.0"
authors = ["zaza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arms = { path = "arms" }
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
chrono = "0.4.13"
num_cpus = "1.13.0"

[dependencies.clap]
version = "3.0.0-beta.1"
features = ["wrap_help"]

[profile.release]
#debug = true
#lto="thin"
#codegen-units=1
opt-level=3

