[package]
name = "arms"
version = "0.1.0"
authors = ["zaza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
rust-htslib = "*"
itertools = "0.7.9"
indicatif = "0.15.0"
slog = "2.5.2"
slog-term = "2.6.0"
num = "0.3.0"

